apps/ferrotune/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferrotune
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: "ferrotune-env"
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: ferrotune
  template:
    metadata:
      labels:
        app: ferrotune
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      volumes:
        - name: ferrotune-music
          persistentVolumeClaim:
            claimName: pvc-ferrotune-music
        - name: ferrotune-data
          persistentVolumeClaim:
            claimName: ferrotune-data
        - name: ferrotune-transcodes
          emptyDir:
            sizeLimit: 20Gi
      containers:
        - name: ferrotune
          image: ghcr.io/fruitiex/ferrotune:main@sha256:a1e738d1865e3300338b22903914e0df66becb3067cd795b34d5d222453d3e9a
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
          volumeMounts:
            - mountPath: /music
              name: ferrotune-music
            - mountPath: /data
              name: ferrotune-data
            - mountPath: /cache/transcodes
              name: ferrotune-transcodes
